--- a/IpSpy/appsettings.json
+++ b/IpSpy/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "IpSpy": {
-        "IPProviderHost": "http://ipinfo.io/ip", //https://icanhazip.com/, http://ipinfo.io/ip
+        "IPProviderHost": "http://ipinfo.io/ip", //https://icanhazip.com/, http://ipinfo.io/ip, https://api.ipify.org/
         "CheckInterval": 5, //minutes
         "SMTP": {
             "Login": "mygmail@gmail.com",
